[tool.poetry]
name = "random-snake"
version = "1.0.0"
description = "just a random sneaky snake"
authors = ["worldmaker <worldmaker18349276@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
random-snake = "random_snake:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
